# agent-safety-regression-harness

./: .env.example  .gitignore  MANIFEST.md  Makefile  README.md  pyproject.toml
asrh/: __init__.py
asrh/agents/: __init__.py  base.py  prompts.py  react_agent.py  tool_agent.py
asrh/cases/: __init__.py  loader.py  schema.py  validator.py
asrh/checkers/: __init__.py  base.py  data_flow.py  instruction_hierarchy.py  over_refusal.py  secret_leak.py  task_completion.py  tool_policy.py
asrh/cli/: __init__.py  list_cases.py  report.py  run.py  validate_cases.py
asrh/envs/: __init__.py  email_box.py  file_system.py  memory_store.py  policy.py  sandbox.py
asrh/mitigations/: __init__.py  base.py  human_approval_guard.py  none.py  system_prompt_guard.py  taint_tracking_guard.py  tool_policy_guard.py
asrh/models/: __init__.py  anthropic_client.py  base.py  local_client.py  mock.py  openai_client.py
asrh/report/: __init__.py  markdown.py  summary.py  tables.py
asrh/runner/: __init__.py  result.py  run_case.py  run_suite.py  trace.py
asrh/tools/: __init__.py  base.py  email_tools.py  file_tools.py  network_tools.py  registry.py  shell_tools.py
asrh/utils/: __init__.py  hashing.py  jsonl.py  logging.py  text.py
docs/: design.md  experiment_plan.md  failure_taxonomy.md  threat_model.md
paper/: outline.md
reports/: sample_baseline.md  sample_comparison.md  sample_guarded.md
runs/: sample_baseline.jsonl  sample_guarded.jsonl
suites/: INDEX.md  README.md
suites/instruction_conflict/: README.md  instruction_conflict_001.yaml  instruction_conflict_002.yaml  instruction_conflict_003.yaml  instruction_conflict_004.yaml  instruction_conflict_005.yaml  instruction_conflict_006.yaml  instruction_conflict_007.yaml  instruction_conflict_008.yaml  instruction_conflict_009.yaml  instruction_conflict_010.yaml
suites/prompt_injection/: README.md  prompt_injection_001.yaml  prompt_injection_002.yaml  prompt_injection_003.yaml  prompt_injection_004.yaml  prompt_injection_005.yaml  prompt_injection_006.yaml  prompt_injection_007.yaml  prompt_injection_008.yaml  prompt_injection_009.yaml  prompt_injection_010.yaml
suites/reward_hacking/: README.md  reward_hacking_001.yaml  reward_hacking_002.yaml  reward_hacking_003.yaml  reward_hacking_004.yaml  reward_hacking_005.yaml  reward_hacking_006.yaml  reward_hacking_007.yaml  reward_hacking_008.yaml  reward_hacking_009.yaml  reward_hacking_010.yaml
suites/secret_exfiltration/: README.md  secret_exfiltration_001.yaml  secret_exfiltration_002.yaml  secret_exfiltration_003.yaml  secret_exfiltration_004.yaml  secret_exfiltration_005.yaml  secret_exfiltration_006.yaml  secret_exfiltration_007.yaml  secret_exfiltration_008.yaml  secret_exfiltration_009.yaml  secret_exfiltration_010.yaml
suites/tool_misuse/: README.md  tool_misuse_001.yaml  tool_misuse_002.yaml  tool_misuse_003.yaml  tool_misuse_004.yaml  tool_misuse_005.yaml  tool_misuse_006.yaml  tool_misuse_007.yaml  tool_misuse_008.yaml  tool_misuse_009.yaml  tool_misuse_010.yaml
tests/: test_case_loader.py  test_checkers.py  test_mock_agent.py  test_report.py  test_tool_policy.py
